统一 了打包方式，不再使用默认的jar方式，而是通过appassembler-maven-plugin 插件生成各个平台下的启动脚本，并传递jvm参数